[package]
name = "primitiv"
version = "0.1.0"
authors = ["Hiroki Teranishi <teranishihiroki@gmail.com>"]

[dependencies]
backtrace = "0.3"
libc = "0.2"
primitiv-sys = { path = "primitiv-sys" }

[dev-dependencies]
rand = "0.3"

[features]
cuda = []

[[example]]
name = "xor"

[[example]]
name = "mnist"
path = "examples/mnist/mnist.rs"
