[package]
name = "primitiv"
version = "0.1.0"
authors = ["Hiroki Teranishi <teranishihiroki@gmail.com>"]

[dependencies]
backtrace = "0.3"
libc = "0.2"
primitiv-sys = { path = "primitiv-sys" }

[dev-dependencies]
rand = "0.3"

[features]
eigen = []
cuda = []
opencl = []

[[example]]
name = "xor"
path = "examples/xor/xor.rs"

[[example]]
name = "mnist"
path = "examples/mnist/mnist.rs"

[[example]]
name = "ptb_rnnlm"
path = "examples/ptb/ptb_rnnlm.rs"

[[example]]
name = "encdec"
path = "examples/encdec/encdec.rs"
